--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
 			<version>1.1.3</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+  <groupId>org.apache.tomcat.embed</groupId>
+  <artifactId>tomcat-embed-logging-log4j</artifactId>
+  <version>7.0.47</version>
+</dependency>
 	</dependencies>
 </project>
